# KaraokeNatin

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  KaraokeNatin-arm64-release.apk.idsig  LICENSE  QUICK_START.md  README.md  build.bat  clean_android_build.bat  package.json  pnpm-lock.yaml  start-dev.bat  todo.md
.github/: BUILD_GUIDE.md
.github/workflows/: build-release.yml
apps/host/: BUILD_SETUP.md  README.md  RUN_INSTRUCTIONS.md  index.html  package.json  vite.config.ts
apps/host/src/: App.tsx  index.css  main.tsx
apps/host/src-tauri/: Cargo.toml  build.rs  error_log.txt  error_log_2.txt  tauri.conf.json
apps/host/src-tauri/capabilities/: default.json
apps/host/src-tauri/remote-ui/: index.html
apps/host/src-tauri/src/: commands.rs  lib.rs  metadata.rs  network.rs  room_state.rs  sidecar.rs  signaling.rs  web_server.rs  youtube.rs
apps/host/src/components/: ControlPanel.tsx  ErrorBoundary.tsx  GuestMode.tsx  HelpDialog.tsx  Library.tsx  ModeSelect.tsx  Player.css  Player.tsx  QRDisplay.css  QRDisplay.tsx  Queue.css  Queue.tsx  ScoringOverlay.tsx
apps/host/src/hooks/: usePeerHost.ts  useRoomState.ts
apps/host/src/lib/: commands.ts  security.ts
apps/signaling-server/: README.md  package.json
apps/signaling-server/src/: index.ts  roomManager.ts  security.ts
apps/web-client/: README.md  next.config.mjs  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/web-client/app/: globals.css  layout.tsx  page.tsx
apps/web-client/app/join/: page.tsx
apps/web-client/app/room/[id]/: page.tsx
apps/web-client/components/: AddSong.tsx  Controls.tsx  NowPlaying.tsx  Playlist.tsx  QueueDisplay.tsx
apps/web-client/lib/: usePeerClient.ts  useRoomState.ts
licenses/: README.md
