[package]
name = "app"
version = "0.1.0"
description = "KaraokeNatin - Karaoke party app with remote control"
authors = ["KaraokeNatin"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
axum = "0.7"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
local-ip-address = "0.6"
dirs = "5"
socketioxide = { version = "0.13", features = ["state"] }
# Pure Rust YouTube integration - search + metadata, no external binaries needed
rusty_ytdl = { version = "0.7", features = ["search"] }
# Random port selection
rand = "0.8"
# Prevent multiple instances
tauri-plugin-single-instance = "2"
# File picker dialogs
tauri-plugin-dialog = "2"
# OpenSSL with vendored feature for cross-compilation
openssl = { version = "0.10", features = ["vendored"] }
